<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchIcons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:switchTextOff="@string/switch_off"
            android:switchTextOn="@string/switch_on"
            android:text="@string/switch_Icons"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPol"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textPolHead"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/text_Pol_Head"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textPol"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/text_Pol_F"
                android:textColor="#000000"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardVes"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textVesHead"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/text_Ves_Head"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textVes"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/text_Ves"
                    android:textColor="#000000"
                    android:maxLength="3"/>

                <TextView
                    android:id="@+id/textVesMera"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/text_Ves_Mera"
                    android:textColor="#000000"/>

            </LinearLayout>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAutoCalc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:defaultValue="false"
            android:switchTextOff="@string/switch_off"
            android:switchTextOn="@string/switch_on"
            android:text="@string/switch_Auto_Calc"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardNorma"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textNormaHead"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/text_Norma_Head"
                android:textStyle="bold"
                android:textColor="#B0BEC5"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textNorma"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/text_Norma"
                    android:textColor="#B0BEC5"/>

                <TextView
                    android:id="@+id/textNormaMera"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/text_Norma_Mera"
                    android:textColor="#B0BEC5"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTrening"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        app:contentPaddingRight="15dp"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textTreningHead"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/text_Trening_Head"
                android:textStyle="bold"
                android:textColor="#B0BEC5"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textTreningBefore"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/plus"
                    android:textColor="#B0BEC5"/>

                <TextView
                    android:id="@+id/textTrening"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/text_Trening"
                    android:textColor="#B0BEC5"/>

                <TextView
                    android:id="@+id/textTreningMera"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/text_Trening_Mera"
                    android:textColor="#B0BEC5"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardResolution"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        android:visibility="visible"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textResolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/check_resolution"
            android:textStyle="bold"
            android:textColor="#000000"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTerms"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="2dp"
        app:cardElevation="2dp"
        app:contentPaddingLeft="15dp"
        android:visibility="visible"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/terms_and_conditions"
            android:textStyle="bold"
            android:textColor="#000000"/>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
</ScrollView>